<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="net.poopyfeed.pf.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/SignupFragment" />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="net.poopyfeed.pf.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/AccountSettingsFragment"
        android:name="net.poopyfeed.pf.AccountSettingsFragment"
        android:label="@string/account_settings_title"
        tools:layout="@layout/fragment_account_settings" />

    <fragment
        android:id="@+id/SignupFragment"
        android:name="net.poopyfeed.pf.SignupFragment"
        android:label="@string/signup_title"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
